Added game and menu switch, renamed start page to menu, created global variable js file

--- a/css/site.css
+++ b/css/site.css
@@ -7,7 +7,7 @@ body {
     min-height: 500px;
 }
 
-.start-page-container, .game-container {
+.menu-container, .game-container {
     min-width: 400px;
     display: flex;
     justify-content: center;
